--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Assignment Solution for Module 2</title>
+</head>
+
+<body>
+    <h1>Our Menu</h1>
+    <div class='row'>
+        <div class="col-lg-4 col-md-6">
+            <div class='col'>
+                <div class="title bg-color1">Chicken</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos
+                    inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex
+                    similique. Animi, perferendis.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <div class="col">
+                <div class="title bg-color2">Beef</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos
+                    inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex
+                    similique. Animi, perferendis.</p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <div class="col">
+                <div class="title bg-color3">Sushi</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos
+                    inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex
+                    similique. Animi, perferendis.</p>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
